# CodeTracer

./: .gitattributes  .gitignore  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yaml  docs.yml
data/traj/kimi_k2.5/: config.json  result.json
docs/: index.html
src/codetracer/: __init__.py  __main__.py
src/codetracer/agents/: __init__.py  base.py  compact.py  context.py  executor.py  trace_agent.py
src/codetracer/benches/: __init__.py  provider.py
src/codetracer/cli/: __init__.py  banner.py  commands.py  repl.py
src/codetracer/config/: __init__.py  default.yaml
src/codetracer/discovery/: __init__.py  explorer.py
src/codetracer/llm/: __init__.py  client.py  token_estimation.py
src/codetracer/models/: __init__.py  analysis.py  replay.py  task.py  trajectory.py  tree.py
src/codetracer/plugins/: __init__.py  adapter.py  hooks.py  registry.py
src/codetracer/prompts/: __init__.py  base_template.py  registry.py
src/codetracer/query/: __init__.py  config.py  normalizer.py  tree_builder.py
src/codetracer/replay/: __init__.py  checkpoint.py  context_inject.py  engine.py  executor_adapter.py  runner.py
src/codetracer/scripts/: __init__.py  analyze_agent_source.py  backfill_step_refs.py  batch_run.py  codetracer_dev.py  organize_step_id_maps.py  restructure_maps.py
src/codetracer/services/: __init__.py  classification.py  complexity.py  cost_tracker.py  file_state.py  memory.py  session_persistence.py  validation.py
src/codetracer/skills/: __init__.py  generator.py  loader.py  pool.py
src/tracer/: __init__.py  __main__.py
(+5105 files in other folders)
